create minimum features
